[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/MainMenuController.gd" type="Script" id=1]
[ext_resource path="res://Assets/title_screen.png" type="Texture" id=2]
[ext_resource path="res://Assets/PlayButton.png" type="Texture" id=3]
[ext_resource path="res://Assets/PlayButtonHover.png" type="Texture" id=4]
[ext_resource path="res://Assets/SFX/MenuHover.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/SFX/MenuClick.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/logo.png" type="Texture" id=7]

[node name="MainMenu" type="Node2D"]

[node name="TitleScreen" type="Sprite" parent="."]
position = Vector2( 163, 92 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 106.0
margin_top = 109.0
margin_right = 234.0
margin_bottom = 173.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
script = ExtResource( 1 )

[node name="MenuHover" type="AudioStreamPlayer" parent="PlayButton"]
stream = ExtResource( 5 )
volume_db = -16.612

[node name="MenuClick" type="AudioStreamPlayer" parent="PlayButton"]
stream = ExtResource( 6 )
volume_db = -13.109

[node name="logo" type="Sprite" parent="."]
position = Vector2( 162.418, 67.41 )
texture = ExtResource( 7 )

[connection signal="mouse_entered" from="PlayButton" to="PlayButton" method="_on_PlayButton_mouse_entered"]
[connection signal="pressed" from="PlayButton" to="PlayButton" method="_on_PlayButton_pressed"]
